# kiwi

./: Cargo.toml  README.MD
src/: assets.rs  lib.rs  shared.rs
src/component/: handles.rs  mod.rs  resource.rs  typemap.rs
src/component/resource/: mod.rs  read.rs  weak.rs  write.rs
src/graphics/: camera.rs  image.rs  mod.rs  textures.rs
src/graphics/lowlevel/: depth.rs  mod.rs  pipeline.rs  shader.rs
src/graphics/lowlevel/buf/: uniform.rs
src/graphics/pipeline/: controller.rs  mod.rs
src/graphics/pipeline/pipelines/: clear.rs
src/input/: camera.rs  keyboard.rs
