[package]
name = "kiwi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
image = "0.25.9"
log = "0.4.29"
smol = "2.0.2"
wgpu = "28.0.0"
glam = { version = "0.30.9", features = ["bytemuck"] }
wgpu_text = "28.0.0"
raw-window-handle = "0.6.2"
rustc-hash = "2.1.1"
thiserror = "2.0.17"
parking_lot = "0.12.5"
winit = "0.30.12"
bitflags = "2.10.0"
crossbeam = "0.8.4"

[dev-dependencies]
rand = "0.9.2"
